--- a/Netflix.html
+++ b/Netflix.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<Netflix.html>
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
@@ -250,4 +250,5 @@
         });
     </script>
 </body>
+
 </html>
